syntax = "proto3";

package group;

option go_package = "github.com/The-Gleb/gmessenger/app/pkg/proto/go/gen/group;group";

import "google/protobuf/timestamp.proto";


service Group {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc GetGroups(GetGroupsRequest) returns (GetGroupsResponse);
    rpc CheckMember(CheckMemberRequest) returns (CheckMembersResponse);
    rpc GetMembers(GetMembersRequest) returns (GetMembersResponse);
    rpc AddMessage(AddMessageRequest) returns (AddMessageResponse);
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
    rpc UpdateMessageStatus(UpdateMessageStatusRequest) returns (UpdateMessageStatusResponse);
    rpc GetMessageById(GetMessageByIdRequest) returns (GetMessageByIdResponse);
}

message GroupView {
    int64 id = 1;
    string name = 2;
    MessageView last_message = 3;
    int32 unread = 5;
}

enum MessageStatus{
    SENT = 0;
    DELIVERED = 1;
    READ = 2;
}

message MessageView {
    int64 id = 1;
    string sender_login = 2;
    int64 group_id = 3;
    string text = 4;
    MessageStatus status = 5;
    google.protobuf.Timestamp timestamp = 6;
}

message CreateRequest {
    string name = 1;
    repeated string member_logins = 2;
}

message CreateResponse {
    int64 id = 1;
}

message GetGroupsRequest {
    string user_login = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetGroupsResponse {
    repeated GroupView groups = 1;
}

message CheckMemberRequest {
    string user_login = 1;
    int64 group_id = 2;
}

message CheckMembersResponse {
    bool is_member = 1;
}

message GetMembersRequest {
    int64 group_id = 1;
}

message GetMembersResponse {
    repeated string member_logins = 1;
}

message AddMessageRequest {
    string sender_login = 1;
    int64 group_id = 2;
    string text = 3;
}

message AddMessageResponse {
    MessageView message = 1;
}

message GetMessagesRequest {
    int64 group_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetMessagesResponse {
    repeated MessageView messages = 1;
}

message UpdateMessageStatusRequest {
    int64 id = 1;
    MessageStatus status = 2;
}

message UpdateMessageStatusResponse {
    int64 id = 1;
    MessageStatus status = 2;
}

message GetMessageByIdRequest {
    int64 id = 1;
}

message GetMessageByIdResponse {
    MessageView message = 1;
}